# html-parsers-benchmark

./: README.md  lib.sh  page_habrahabr-70330.html  page_habrahabr-index.html  platforms.txt  prepare.sh  run.sh  to_csv.py
c-libxml2/: .gitignore  main.c  prepare.sh  run.sh
dart/: prepare.sh  pubspec.yaml  run.sh
erlang/: .gitignore  prepare.sh  rebar.config  run.sh
erlang/src/: exomler_parser.erl  mochiweb_parser.erl  parser.erl
golang/: .gitignore  prepare.sh  run.sh
golang/src/bench_exp_html/: main.go
golang/src/bench_gokogiri/: main.go
golang/src/bench_h5/: main.go
haskell/: html-parser-benchmark.cabal  prepare.sh  run.sh
java/: pom.xml  prepare.sh  run.sh
java/src/main/java/: TestJSoup.java
mono/: .gitignore  BenchHtmlAgilityPack.cs  BenchSgmlReader.cs  prepare.sh  run.sh
nodejs/: cheerio_parser.js  htmlparser_parser.js  jsdom_parser.js  package.json  run.sh
perl/: mojo_parser.pm  prepare.sh  run.sh
php-tidy/: prepare.sh  run.sh  tidy_simplexml.php
pypy/: prepare.sh  run.sh
python/: bsoup3_parser.py  bsoup4_parser.py  html5lib_parser.py  lxml_parser.py  prepare.sh  run.sh  scrapy_parser.py
ruby/: nokogiri_parser.rb  prepare.sh  run.sh
stats/: .gitignore  main.r
